@@ -19,6 +19,9 @@ Brenden Matthews <brenden at rty dot ca>
 Bruce Merry <bmerry at cs dot uct dot ac dot za>
   Xdbe (double buffering)
 
+btlee
+  linkstatus patch (http://forums.gentoo.org/viewtopic-p-2765647.html#2765647)
+
 dan-h <dan-h at users dot sourceforge dot net>
   adt746x fix
 
